--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TestAutomationDemo</string>
+    <string name="username_invalid">UserName is invalid</string>
 </resources>
